fix: sticky header/sidebar flickering on scroll in Safari

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -28,6 +28,10 @@ body {
     transition-duration: 700ms;
 }
 
+.invisible-children * {
+    visibility: hidden;
+}
+
 @supports (-moz-appearance: none) {
     .moz-ml-n2px {
         margin-left: -2px;
